# nif-validator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SUBMIT-COPIES.md  blog-post.md  package-lock.json
.claude/: settings.json
.github/workflows/: ci.yml
docs/: algorithm.md
dotnet/: Kreyo.NifValidator.sln
dotnet/src/Kreyo.NifValidator/: Kreyo.NifValidator.csproj  NifValidator.cs
dotnet/tests/Kreyo.NifValidator.Tests/: Kreyo.NifValidator.Tests.csproj  NifValidatorTests.cs
python/: hatch_build.py  pyproject.toml
python/src/nif_validator/: __init__.py
python/tests/: test_nif_validator.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/tests/: index.test.ts
