[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nif-validator"
version = "0.1.0"
description = "Reference implementation for validating Spanish tax IDs (DNI, NIE, CIF). Pure functions, no dependencies, fully typed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kreyo" }]
keywords = ["nif", "cif", "nie", "dni", "spain", "spanish", "tax", "validation", "identifier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kreyo-io/nif-validator"
Repository = "https://github.com/kreyo-io/nif-validator"
Issues = "https://github.com/kreyo-io/nif-validator/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/nif_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src/nif_validator", "tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
